--- a/_posts/2020-01-27-LA_basic.md
+++ b/_posts/2020-01-27-LA_basic.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Linearity, Linear Combination
-category: Linear-Algebra
-tag: Linear Algebra
+category: Linear Algebra
+tag: Linear-Algebra
 ---
 
  
