--- a/_posts/2020-01-27-LA_basic.md
+++ b/_posts/2020-01-27-LA_basic.md
@@ -9,12 +9,16 @@ tag: Linear-Algebra
 
 본 게시물의 내용은 [이상화 교수님의 선형대수](https://www.youtube.com/playlist?list=PLSN_PltQeOyjDGSghAf92VhdMBeaLZWR3)를 듣고 정리한 글입니다.
 
+
+
 # Linearity
 
 1. __Superposition__ 
 2. __Homogeniety__ 
 
-_for function_
+
+
+__for function__
 
 1. $f(x_1+x_2) = f(x_1) + f(x_2)$
 
@@ -22,7 +26,9 @@ _for function_
 
 &rarr;  $f(a_1x_1 + a_2x_2) = a_1f(x_1) + a_2f(x_2)$ 일 때, 그 $f$가 Linear하다고 말할 수 있다.
 
-_for operation_
+
+
+__for operation__
 
 Ex1)	_Differentiation_ : $\frac{d}{dt}(a_1x_1(t) + a_2x_2(t)) = a_1\frac{d}{dt}x_1(t) + a_2\frac{d}{dt}x_2(t)$ 
 
@@ -31,6 +37,8 @@ Ex2)	_Integration_ : $\int(a_1x_1(t) + a_2x_2(t))dt = a_1\int{x_1(t)}dt + a_2\in
 Ex3)	_Matrix_ : $A(a_1X_1 + a_2X_2) = a_1AX_1 + a_2AX_2$
 
 &rarr; __Linearity는 항상 이렇게 증명한다__
+
+
 
 
 
@@ -65,12 +73,20 @@ Ex3)	_Matrix_ : $A(a_1X_1 + a_2X_2) = a_1AX_1 + a_2AX_2$
 $$
 \vec{V} = \left[\begin{array}{ccc} a_1 \\ b_1 \\ c_1 \end{array}\right], \quad \vec{W} = \left[\begin{array}{ccc} a_2 \\ b_2 \\ c_2 \end{array}\right]
 $$
+
+
 스칼라 값인 $\alpha ,\beta$ 에 대하여 다음과 같은 등식이 성립한다.
+
+
 $$
 \alpha \vec{V} + \beta \vec{W} = \left[\begin{array}{ccc} \vec{V} & \vec{W} \end{array}\right]\left[\begin{array}{ccc} \alpha \\ \beta \end{array}\right]
 $$
+
+
 여기서 앞부분의 $\left[\begin{array}{ccc} \vec{V} & \vec{W} \end{array}\right]$를  $\vec{V}, \vec{W}$ 의 선형결합이라고 하며 이를 좀 더 일반화 하면 다음과 같이 나타낼 수 있다.
 
 공간 $\mathbb{V}$위의 벡터 $\vec{v_1}, \vec{v_2}, ... \vec{v_n}$ 가 있다. 임의의 스칼라 값 $l_1, l_2, ... l_n$ 에 대해
 
-$w = l_1\vec{v_1} + l_2\vec{v_2} + ... + l_n\vec{v_n} = \displaystyle\sum_{i=1}^{n}l_i\vec{v_i}$ 일 때, $w$ 를  $\vec{v_1}, \vec{v_2}, ... \vec{v_n}$의 __선형 결합(Linear Combination)__ 이라고 한다.
+$$w = l_1\vec{v_1} + l_2\vec{v_2} + ... + l_n\vec{v_n} = \displaystyle\sum_{i=1}^{n}l_i\vec{v_i}$$ 
+
+일 때, $w$ 를  $\vec{v_1}, \vec{v_2}, ... \vec{v_n}$의 __선형 결합(Linear Combination)__ 이라고 한다.
