--- a/_posts/2020-01-26-R_basic.md
+++ b/_posts/2020-01-26-R_basic.md
@@ -9,7 +9,7 @@ tag: R
 
 <br/>
 
-## Data 읽기
+# Data 읽기
 
 ```R
 read.table("file_name.txt") 	#table 읽기
@@ -30,7 +30,7 @@ SQL에 관한 사항은 여기에서 볼 수 있다.
 
 
 
-## R 사용하기
+# R 사용하기
 
 기본 명령어 리스트는 [여기](https://goo.gl/xcE4cz)를 참조하자.
 
