--- a/_posts/2020-01-28-homl0.md
+++ b/_posts/2020-01-28-homl0.md
@@ -15,4 +15,4 @@ tag: Machine-Learning
 
 <br/>
 
-머신러닝을 처음 접하시는 분은 게시물을 따라가시며 저와 함께 공부하시면 좋을 듯 합니다.
+머신러닝을 처음 접하시는 분을 위해 작성되었습니다. 머신러닝에 대한 지식이 없으신 분은 게시물을 따라가시며 저와 함께 공부하시면 좋을 듯 합니다. 부족한 게시물을 읽어주시는 모든 분들께 감사의 말씀을 전합니다.
