--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1.머신러닝
+title: 1. 머신러닝
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
@@ -15,7 +15,7 @@ tag: Machine-Learning
 >
 > "어떤 작업 T에 대한 컴퓨터 프로그램의 성능을 P로 측정했을 때 경험 E로 인해 성능이 향상됐다면, 이 컴퓨터 프로그램은 작업 T와 성능 측정 P에 대해 경험 E로 학습한 것이다." - Tom Michell, 1997
 
-
+<br/>
 
 ## 2. 왜 머신러닝을 사용하는가?
 
@@ -25,7 +25,7 @@ tag: Machine-Learning
 
 ## 3. 머신러닝 시스템의 종류
 
-- __지도학습과 비지도 학습__ 
+- 지도학습과 비지도 학습
 
   - __지도 학습__ (Supervised Learning) : 알고리즘에 주입하는 훈련 데이터에 __레이블__ (label)이라는 원하는 답이 포함된다. ( _분류, 회귀 등_ )
     - k - 최근접 이웃(k-Nearest Neighbors, kNN)
