--- a/_posts/2020-01-28-homl0.md
+++ b/_posts/2020-01-28-homl0.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 0.Introduction
+title: 0. Introduction
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
@@ -9,10 +9,6 @@ tag: Machine-Learning
 
 블로그를 개설하고 나서 이것저것 올려보다가 너무 중구난방이 될 것 같아 가이드북을 하나 정해서 그것을 따라가기로 하였습니다.
 
-<br/>
-
 고심 끝에 정한 책은 [Hands on Machine Learning](http://www.yes24.com/Product/Goods/59878826) (오렐리앙 제롱, 한빛미디어, 2018) 입니다. 커버 범위가 넓어 한 권으로도 많은 부분을 커버할 수 있다는 것이 이유였습니다. 저는 책의 앞부분은 본 상태이며 복습 차원에서 처음부터 정리해나가려 합니다. 책에서 설명이 부족한 부분은 다른 책이나 인터넷 자료들을 참조하며 보강해나갈 생각입니다.
 
-<br/>
-
-머신러닝을 처음 접하시는 분을 위해 작성되었습니다. 머신러닝에 대한 지식이 없으신 분은 게시물을 따라가시며 저와 함께 공부하시면 좋을 듯 합니다. 부족한 게시물을 읽어주시는 모든 분들께 감사의 말씀을 전합니다.
+위의 게시물은 머신러닝을 __처음 접하시는 분__ 을 위해 작성되었습니다. 머신러닝에 대한 지식이 없으신 분은 게시물을 따라가시며 저와 함께 공부하시면 좋을 듯 합니다. 부족한 게시물을 읽어주시는 모든 분들께 감사의 말씀을 전합니다.
