--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1. 머신러닝
+title: 1. Machine Learning
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
@@ -25,17 +25,17 @@ tag: Machine-Learning
 
 ## 3. 머신러닝 시스템의 종류
 
-- __지도학습과 비지도 학습__
+- 지도학습과 비지도 학습
 
-  - __지도 학습__ (Supervised Learning) : 알고리즘에 주입하는 훈련 데이터에 __레이블__ (label)이라는 원하는 답이 포함된다. ( _분류, 회귀 등_ )
-    - k - 최근접 이웃(k-Nearest Neighbors, kNN)
+  - 지도 학습(Supervised Learning) : 알고리즘에 주입하는 훈련 데이터에 __레이블__ (label)이라는 원하는 답이 포함된다. ( _분류, 회귀 등_ )
+  - k - 최근접 이웃(k-Nearest Neighbors, kNN)
     - 선형 회귀(Linear Regression)
     - 로지스틱 회귀(Logistic Regression)
     - 서포트 벡터 머신(Support Vector Machine, SVM)
     - 결정 트리(Decision Tree)와 랜덤 포레스트(Random Forest)
     - 신경망(Neural Networks)
 
-  - __비지도 학습__ (Unsupervised Learning) : 시스템이 아무런 도움(레이블 사전 주입)없이 학습한다.
+  - 비지도 학습(Unsupervised Learning) : 시스템이 아무런 도움(레이블 사전 주입)없이 학습한다.
     - 군집(Clustering) : k-평균(k-Means), 계층 군집 분석(Hierarchical Cluster Analysis, HCA), 기댓값 최대화(Expectation Maximization)
     - 시각화(Visualization)와 차원축소(Dimensionality reduction) : 주성분 분석(Principal Component Analysis, PCA), 커널 PCA(kernal PCA), 지역적 선형 임베딩(Locally-Linear Embedding, LLE), t-SNE(t-distributed Stochastic Neighbor Embedding)
     - 연관 규칙 학습(Association rule learning) : 아프리오리(Apriori), 이클렛(Eclat)
@@ -44,13 +44,13 @@ tag: Machine-Learning
     - 준지도 학습
     - 강화 학습
 
-
+<br/>
 
 - 배치 학습과 온라인 학습
   - 배치 학습 : 데이터 셋을 미리 준비한 뒤 모든 데이터를 사용하여 학습. 방법이 간단하지만, 시스템이 빠르게 변화해야 하는 상황 혹은 너무 많은 데이터를 사용해야 하는 상황에서는 시간이 너무 지연된다. 이럴 때는 점진적으로 학습하는 알고리즘을 사용해야 한다.
   - 온라인 학습 : 데이터를 미니 배치라고 부르는 작은 묶음 단위로 주입. 아주 큰 데이터 셋도 다룰 수 있으며, 점진적으로 학습하므로 시스템이 미니 배치에 따라 변화할 수 있다.
 
-
+<br/>
 
 - 사례 기반 학습과 모델 기반 학습
   - 사례 기반 학습 : 기계가 샘플을 기억한다. 이후 새로운 데이터가 들어오면 그 사례와 같은, 혹은 비슷한 정도(유사도)를 측정하여 일반화한다.
@@ -64,13 +64,13 @@ tag: Machine-Learning
 2. 대표성 없는 훈련 데이터
 3. 낮은 품질의 데이터
 4. 관련 없는 특성
-5. 훈련 데이터 과대적합(Overfitting) : 훈련 데이터에 '너무' 잘 맞아 일반성이 떨어지는 경우
+5. 과대 적합과 과소적합
 
-- 해결 방법 : 파라미터 수가 적은 모델 선택, 훈련 데이터에 있는 특성 수 축소, 모델에 제약 가하기 등의 방법을 통해 모델을 단순화 / 훈련 데이터를 더 많이 모으기 / 훈련 데이터의 노이즈 줄이기(이상치 제거 등)
+- 훈련 데이터 과대적합(Overfitting) : 훈련 데이터에 '너무' 잘 맞아 일반성이 떨어지는 경우
+  - 해결 방법 : 파라미터 수가 적은 모델 선택, 훈련 데이터에 있는 특성 수 축소, 모델에 제약 가하기 등의 방법을 통해 모델을 단순화 / 훈련 데이터를 더 많이 모으기 / 훈련 데이터의 노이즈 줄이기(이상치 제거 등)
 
-6. 훈련 데이터 과소적합(Underfitting)
-
-- 해결 방법 : 파라미터 수가 더 많은 모델 선택 / 학습 알고리즘에 더 좋은 특성 제공 / 모델의 제약 줄이기
+- 훈련 데이터 과소적합(Underfitting)
+  - 해결 방법 : 파라미터 수가 더 많은 모델 선택 / 학습 알고리즘에 더 좋은 특성 제공 / 모델의 제약 줄이기
 
 
 
@@ -78,6 +78,6 @@ tag: Machine-Learning
 
 <추후 그림을 통해 추가 예정>
 
-
+<br/><br/>
 
 ※ 첫 단원부터 다양한 머신러닝 기법을 설명하면서 듣도 보도 못한 용어가 많이 등장하여 당황하신 분도 계실 것입니다. 이번 단원에서는 그냥 이런 기법들이 있다는 것, 그리고 이후에 등장한다는 것만 알아두시고 넘어가면 좋을 것 같습니다.
