--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -28,7 +28,7 @@ tag: Machine-Learning
 - 지도학습과 비지도 학습
 
   - 지도 학습(Supervised Learning) : 알고리즘에 주입하는 훈련 데이터에 __레이블__ (label)이라는 원하는 답이 포함된다. ( _분류, 회귀 등_ )
-  - k - 최근접 이웃(k-Nearest Neighbors, kNN)
+    - k - 최근접 이웃(k-Nearest Neighbors, kNN)
     - 선형 회귀(Linear Regression)
     - 로지스틱 회귀(Logistic Regression)
     - 서포트 벡터 머신(Support Vector Machine, SVM)
@@ -72,12 +72,14 @@ tag: Machine-Learning
 - 훈련 데이터 과소적합(Underfitting)
   - 해결 방법 : 파라미터 수가 더 많은 모델 선택 / 학습 알고리즘에 더 좋은 특성 제공 / 모델의 제약 줄이기
 
-
+<br/>
 
 ## 5. 테스트와 검증
 
 <추후 그림을 통해 추가 예정>
 
-<br/><br/>
+<br/>
 
-※ 첫 단원부터 다양한 머신러닝 기법을 설명하면서 듣도 보도 못한 용어가 많이 등장하여 당황하신 분도 계실 것입니다. 이번 단원에서는 그냥 이런 기법들이 있다는 것, 그리고 이후에 등장한다는 것만 알아두시고 넘어가면 좋을 것 같습니다.
+### ※
+
+ 첫 단원부터 다양한 머신러닝 기법을 설명하면서 듣도 보도 못한 용어가 많이 등장하여 당황하신 분도 계실 것입니다. 이번 단원에서는 그냥 이런 기법들이 있다는 것, 그리고 이후에 등장한다는 것만 알아두시고 넘어가면 좋을 것 같습니다.
