--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -44,13 +44,9 @@ tag: Machine-Learning
     - 준지도 학습
     - 강화 학습
 
-<br/>
-
 - 배치 학습과 온라인 학습
   - 배치 학습 : 데이터 셋을 미리 준비한 뒤 모든 데이터를 사용하여 학습. 방법이 간단하지만, 시스템이 빠르게 변화해야 하는 상황 혹은 너무 많은 데이터를 사용해야 하는 상황에서는 시간이 너무 지연된다. 이럴 때는 점진적으로 학습하는 알고리즘을 사용해야 한다.
   - 온라인 학습 : 데이터를 미니 배치라고 부르는 작은 묶음 단위로 주입. 아주 큰 데이터 셋도 다룰 수 있으며, 점진적으로 학습하므로 시스템이 미니 배치에 따라 변화할 수 있다.
-
-<br/>
 
 - 사례 기반 학습과 모델 기반 학습
   - 사례 기반 학습 : 기계가 샘플을 기억한다. 이후 새로운 데이터가 들어오면 그 사례와 같은, 혹은 비슷한 정도(유사도)를 측정하여 일반화한다.
@@ -80,6 +76,4 @@ tag: Machine-Learning
 
 <br/>
 
-### ※
-
- 첫 단원부터 다양한 머신러닝 기법을 설명하면서 듣도 보도 못한 용어가 많이 등장하여 당황하신 분도 계실 것입니다. 이번 단원에서는 그냥 이런 기법들이 있다는 것, 그리고 이후에 등장한다는 것만 알아두시고 넘어가면 좋을 것 같습니다.
+※ 첫 단원부터 다양한 머신러닝 기법을 설명하면서 듣도 보도 못한 용어가 많이 등장하여 당황하신 분도 계실 것입니다. 이번 단원에서는 그냥 이런 기법들이 있다는 것, 그리고 이후에 등장한다는 것만 알아두시고 넘어가면 좋을 것 같습니다.
