--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -40,7 +40,7 @@ tag: Machine-Learning
     - 시각화(Visualization)와 차원축소(Dimensionality reduction) : 주성분 분석(Principal Component Analysis, PCA), 커널 PCA(kernal PCA), 지역적 선형 임베딩(Locally-Linear Embedding, LLE), t-SNE(t-distributed Stochastic Neighbor Embedding)
     - 연관 규칙 학습(Association rule learning) : 아프리오리(Apriori), 이클렛(Eclat)
 
-  - 준지도 학습과 강화 학습 _<추후 추가 예정>_
+  - 준지도 학습과 강화 학습  _(내용 추가 바람)_
     - 준지도 학습
     - 강화 학습
 
@@ -72,7 +72,9 @@ tag: Machine-Learning
 
 ## 5. 테스트와 검증
 
-<추후 그림을 통해 추가 예정>
+![TrainTestSet](https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Machine_learning_nutshell_--_Split_into_train-test_set.svg/640px-Machine_learning_nutshell_--_Split_into_train-test_set.svg.png)
+
+_(내용추가바람)_
 
 <br/>
 
