--- a/_posts/2020-01-28-homl1_1.md
+++ b/_posts/2020-01-28-homl1_1.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 1. Machine Learning
+title: 1-1. Machine Learning
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
 
  
 
-## 1. 머신러닝이란?
+## 1) 머신러닝이란?
 
 머신러닝에 대한 정의
 
@@ -17,13 +17,13 @@ tag: Machine-Learning
 
 <br/>
 
-## 2. 왜 머신러닝을 사용하는가?
+## 2) 왜 머신러닝을 사용하는가?
 
 전통적인 방법(사람이 모델을 만들어내는)으로는 __복잡한 문제__ (이를테면, 스팸 메일을 분류해주는 필터기)를 풀기 어렵다. 반면 __머신러닝 기법__ (어떤 메일이 스팸 메일인지 자동으로 기계가 학습)을 사용하면 __프로그램이 짧아져__ 유지보수하기 쉬우며 대부분 __정확도__ 가 더 높다.
 
 <br/>
 
-## 3. 머신러닝 시스템의 종류
+## 3) 머신러닝 시스템의 종류
 
 - 지도학습과 비지도 학습
 
@@ -50,11 +50,11 @@ tag: Machine-Learning
 
 - 사례 기반 학습과 모델 기반 학습
   - 사례 기반 학습 : 기계가 샘플을 기억한다. 이후 새로운 데이터가 들어오면 그 사례와 같은, 혹은 비슷한 정도(유사도)를 측정하여 일반화한다.
-  - 모델 기반 학습 : 기계가 샘플을 통해 새로운 모델을 생성, 이를 훈련(Training)이라고 한다. 이를 기준으로 새로운 데이터를 일반화한다. 모델에는 그 모양을 결정하는 __파라미터__ (parameter)가 있다. 또, 만들어진 모델을 실제 데이터와 비교하여 평가하기 위한 함수들이 있다. [효용 함수(utility function, 모델이 얼마나 좋은지 평가)과 __비용 함수__ (cost function, 모델이 얼마나 나쁜지 평가)]
+  - 모델 기반 학습 : 기계가 샘플을 통해 새로운 모델을 생성, 이를 훈련(Training)이라고 한다. 이를 기준으로 새로운 데이터를 일반화한다. 모델에는 그 모양을 결정하는 __파라미터__ (parameter)가 있다. 또, 만들어진 모델을 실제 데이터와 비교하여 평가하기 위한 함수들이 있다. <br/>[효용 함수(utility function, 모델이 얼마나 좋은지 평가)과 __비용 함수__ (cost function, 모델이 얼마나 나쁜지 평가)]
 
 <br/>
 
-## 4. 머신러닝의 주요 도전 과제
+## 4) 머신러닝의 주요 도전 과제
 
 1. 충분하지 않은 양의 훈련 데이터
 2. 대표성 없는 훈련 데이터
@@ -70,7 +70,7 @@ tag: Machine-Learning
 
 <br/>
 
-## 5. 테스트와 검증
+## 5) 테스트와 검증
 
 ![TrainTestSet](https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Machine_learning_nutshell_--_Split_into_train-test_set.svg/640px-Machine_learning_nutshell_--_Split_into_train-test_set.svg.png)
 
