--- a/_posts/2020-01-29-numpy.md
+++ b/_posts/2020-01-29-numpy.md
@@ -19,16 +19,12 @@ tag: Daily
 import numpy as np
 ```
 
-
-
-- 배열 생성하기
+- ndarray 생성하기
 
 ```python
 arr1 = np.array([1, 2, 3])
 arr2 = np.array([[1, 2, 3], [4, 5, 6]])
 ```
-
-
 
 - type(), .dtype, .astype, .shape, .ndim
 
@@ -36,23 +32,95 @@ arr2 = np.array([[1, 2, 3], [4, 5, 6]])
 type(arr1)
 > class 'numpy.ndarray'
 
-arr1.dtype
+print(arr1.dtype)
 > int 64
 
 arr1.astype('int32')
-arr1.dtype
+print(arr1.dtype)
 > int 32
 
-arr1.shape
+print(arr1.shape)
 > (3,)
-arr2.shape
+print(arr2.shape)
 > (2,3)
 
-arr1.ndim
+print(arr1.ndim)
 > 1
-arr2.ndim
+print(arr2.ndim)
 > 2
 ```
 
+- .arange(), .zeros(), .ones()
 
+```python
+arr3 = np.arange(30)
+print(arr3)
+> [0, 1, 2, ... , 29, 30]
+
+arr4 = np.zeros(5)
+print(arr4)
+> [0, 0, 0, 0, 0]
+
+arr5 = np.ones(5)
+print(arr5)
+> [1, 1, 1, 1, 1]
+```
+
+- .reshape()
+
+```python
+arr_re1 = np.arange(12).reshape(3, 4)
+print(arr_re1)
+>[[0, 1, 2, 3], [4, 5, 6, 7], [8, 9, 10, 11]]
+
+arr_re2 = np.arange(50).reshape(2, 5, -1)
+#위 처럼 한 차원은 -1로 다룰 수 있다. (두 차원에 -1을 넣는 것은 불가) #결과 생략
+```
+
+
+
+- 인덱싱(Indexing)
+
+  - 특정 데이터 추출
+
+  ```python
+  print(arr1[1])
+  > 1
+  
+  print(arr2[0,1])
+  > 1
+  ```
+
+  - 슬라이싱(Slicing)
+
+  ```python
+  print(arr1[1:2])
+  > [2, 3]
+  print(arr2[0, 1:2])
+  > [2, 3]
+  print(arr2[0:1, 1:2])
+  > [[2, 3], [3, 4]]
+  print(arr_re1[1:,:])
+  > [[4, 5, 6, 7], [8, 9, 10, 11]]
+  ```
+
+  - 팬시(Fancy) 인덱싱 : 인덱스를 지정하면 그에 맞는 원소를 ndarray로 반환
+
+  ```python
+  print(arr_re1[[0,2], 1:])
+  > [[1, 2, 3], [9, 10, 11]]
+  ```
+
+  - 불린(Boolean) 인덱싱
+
+  ```python
+  arr3 > 25
+  > [False, False, ... , False, True, True, True, True]
+  print(arr3[arr3 > 25])
+  > [26, 27, 28, 29]
+  ```
+
+
+
+- 정렬
 
