--- a/_posts/2020-01-29-numpy.md
+++ b/_posts/2020-01-29-numpy.md
@@ -77,9 +77,9 @@ arr_re2 = np.arange(50).reshape(2, 5, -1)
 #위 처럼 한 차원은 -1로 다룰 수 있다. (두 차원에 -1을 넣는 것은 불가) #결과 생략
 ```
 
+<br/>
 
-
-- 인덱싱(Indexing)
+- __인덱싱(Indexing)__
 
   - 특정 데이터 추출
 
@@ -120,7 +120,33 @@ arr_re2 = np.arange(50).reshape(2, 5, -1)
   > [26, 27, 28, 29]
   ```
 
+<br/>
+
+- 정렬 - .sort(), .argsort()
+
+```python
+arr_srt = np.array([3, 1, 9, 5])
+arr_srtd = np.sort(arr_srt)
+print(arr_srtd)
+> [1, 3, 5, 9]
+
+ndarray.sort(arr_srt)
+print(arr_srt)
+> [1, 3, 5, 9]
+
+np.sort
 
 
-- 정렬
+np.argsort()
+```
+
+<br/>
+
+- 선형대수 연산 - 행렬 내적(Inner product)과 전치 행렬(Transpose) 구하기
+
+```python
+arr2 = np.sort()
+```
+
+
 
