--- a/_posts/2020-01-29-numpy.md
+++ b/_posts/2020-01-29-numpy.md
@@ -9,6 +9,8 @@ tag: Daily
 
 아래 내용은 [파이썬 머신러닝 완벽 가이드] 를 참조하여 작성하였습니다.
 
+
+
 ## Numpy
 
 
@@ -55,15 +57,15 @@ print(arr2.ndim)
 ```python
 arr3 = np.arange(30)
 print(arr3)
-> [0, 1, 2, ... , 29, 30]
+> [0 1 2 ... 29 30]
 
 arr4 = np.zeros(5)
 print(arr4)
-> [0, 0, 0, 0, 0]
+> [0 0 0 0 0]
 
 arr5 = np.ones(5)
 print(arr5)
-> [1, 1, 1, 1, 1]
+> [1 1 1 1 1]
 ```
 
 - .reshape()
@@ -71,7 +73,7 @@ print(arr5)
 ```python
 arr_re1 = np.arange(12).reshape(3, 4)
 print(arr_re1)
->[[0, 1, 2, 3], [4, 5, 6, 7], [8, 9, 10, 11]]
+>[[0 1 2 3] [4 5 6 7] [8 9 10 11]]
 
 arr_re2 = np.arange(50).reshape(2, 5, -1)
 #위 처럼 한 차원은 -1로 다룰 수 있다. (두 차원에 -1을 넣는 것은 불가) #결과 생략
@@ -95,20 +97,20 @@ arr_re2 = np.arange(50).reshape(2, 5, -1)
 
   ```python
   print(arr1[1:2])
-  > [2, 3]
+  > [2 3]
   print(arr2[0, 1:2])
-  > [2, 3]
+  > [2 3]
   print(arr2[0:1, 1:2])
-  > [[2, 3], [3, 4]]
+  > [[2 3] [3 4]]
   print(arr_re1[1:,:])
-  > [[4, 5, 6, 7], [8, 9, 10, 11]]
+  > [[4 5 6 7] [8 9 10 11]]
   ```
 
   - 팬시(Fancy) 인덱싱 : 인덱스를 지정하면 그에 맞는 원소를 ndarray로 반환
 
   ```python
   print(arr_re1[[0,2], 1:])
-  > [[1, 2, 3], [9, 10, 11]]
+  > [[1 2 3] [9 10 11]]
   ```
 
   - 불린(Boolean) 인덱싱
@@ -117,7 +119,7 @@ arr_re2 = np.arange(50).reshape(2, 5, -1)
   arr3 > 25
   > [False, False, ... , False, True, True, True, True]
   print(arr3[arr3 > 25])
-  > [26, 27, 28, 29]
+  > [26 27 28 29]
   ```
 
 <br/>
@@ -126,26 +128,40 @@ arr_re2 = np.arange(50).reshape(2, 5, -1)
 
 ```python
 arr_srt = np.array([3, 1, 9, 5])
+
 arr_srtd = np.sort(arr_srt)
 print(arr_srtd)
-> [1, 3, 5, 9]
+> [1 3 5 9]
 
 ndarray.sort(arr_srt)
 print(arr_srt)
-> [1, 3, 5, 9]
+> [1 3 5 9]
 
-np.sort
-
-
-np.argsort()
+arr_srt2 = np.array([3, 2], [5, 1])
+arr_srt2dr = np.sort(arr_srt2, axis=1)
+print(arr_srt2dr)
+> [[2 3] [1 5]]
+arr_srt2dc = np.sort(arr_srt2, axis=1)
+print(arr_srt2dc)
+> [[3 1] [5 2]]
+np.argsort(arr_srt)
+> [1 0 3 2]
 ```
 
 <br/>
 
-- 선형대수 연산 - 행렬 내적(Inner product)과 전치 행렬(Transpose) 구하기
+- 선형대수 연산 - 행렬 내적(Inner product)과 전치 행렬(Transpose) 구하기 : np.dot(), np.transpose()
 
 ```python
-arr2 = np.sort()
+arr6 = np.array([[1, 2], [3, 4]])
+arr7 = np.array([[5, 6], [7, 8]])
+dot_p = np.dot(arr6, arr7)
+print(dot_p)
+> [[19 22] [43 50]]
+
+trans_p = np.transpose(arr6)
+print(trans_p)
+> [[1 3] [2 4]]
 ```
 
 
