--- a/_posts/2020-01-29-numpy.md
+++ b/_posts/2020-01-29-numpy.md
@@ -32,7 +32,7 @@ arr2 = np.array([[1, 2, 3], [4, 5, 6]])
 
 ```python
 type(arr1)
-> class 'numpy.ndarray'
+> class <'numpy.ndarray'>
 
 print(arr1.dtype)
 > int 64
