--- a/_posts/2020-01-29-numpy.md
+++ b/_posts/2020-01-29-numpy.md
@@ -26,14 +26,14 @@ import numpy as np
 ```python
 arr1 = np.array([1, 2, 3])
 arr2 = np.array([[1, 2, 3], [4, 5, 6]])
-```
 
-- type(), .dtype, .astype, .shape, .ndim
-
-```python
 type(arr1)
 > class <'numpy.ndarray'>
+```
 
+- .dtype, .astype, .shape, .ndim
+
+```python
 print(arr1.dtype)
 > int 64
 
