--- a/_posts/2020-01-29-numpy.md
+++ b/_posts/2020-01-29-numpy.md
@@ -2,7 +2,7 @@
 layout: post
 title: Numpy
 category: Python
-tag: Daily
+tag: Python
 ---
 
  
@@ -163,6 +163,3 @@ trans_p = np.transpose(arr6)
 print(trans_p)
 > [[1 3] [2 4]]
 ```
-
-
-
