--- a/_posts/2020-01-29-numpy.md
+++ b/_posts/2020-01-29-numpy.md
@@ -7,7 +7,7 @@ tag: Python
 
  
 
-아래 내용은 [파이썬 머신러닝 완벽 가이드] 를 참조하여 작성하였습니다.
+아래 내용은 [파이썬 머신러닝 완벽 가이드](http://www.yes24.com/Product/Goods/69752484) (권철민, 위키북스, 2019)를 참조하여 작성하였습니다.
 
 
 
