--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1-1. Machine Learning
+title: 1. Machine Learning Landscape
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
