--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -9,8 +9,6 @@ tag: Machine-Learning
 
 ## 1) 큰 그림 보기
 
-
-
 - 비즈니스의 문제는 무엇이고, 현재 솔루션은 어떻게 구성되어 있는가?
 
 - 어떤 방법을 사용할 것인가?  지도/비지도/강화 학습 중 어떤 것인가? (만약 지도학습이라면) 분류인가 회귀인가?  배치/온라인 학습 중 어떤 것을 사용할 것인가?
@@ -39,7 +37,7 @@ tag: Machine-Learning
   MAE(\mathbb{X},h) = \frac{1}{m}\sum_i^m|h(\mathbb{X^i}-y^i)|
   $$
 
-  RMSE와 MAE 모두 예측값의 벡터와 타깃값의 벡터 사이의 거리를 재는 방법. 다만 둘의 거리 측정 방법인 노름(norm)[^norm]이 다르다.
+  RMSE와 MAE 모두 예측값의 벡터와 타깃값의 벡터 사이의 거리를 재는 방법. 다만 둘의 거리 측정 방법인 노름(norm)이 다르다. 노름에 대한 정보는 [김태완님 블로그](http://taewan.kim/post/norm/) 를 참조하자.
 
 <br/>
 
@@ -72,7 +70,8 @@ tag: Machine-Learning
   from sklearn.preprocessing import Imputer
   
   imputer = Imputer(strategy="median")
-  imputer.fit(df)	#df의 특성이 수치형일 경우에만 사용할 수 있다.
+  imputer.fit(df)
+  #df의 특성이 수치형일 경우에만 사용할 수 있다.
   ```
 
 - 텍스트와 범주형 특성 다루기
@@ -80,9 +79,11 @@ tag: Machine-Learning
   - 범주형 특성을 어떻게 다룰 수 있을까?
 
   ```python
-  df_reg = df['region']	#'region'에는 '서울', '인천', '경기', '대전', '충남', '충북', '강원'이 있다고 가정하자.
+  df_reg = df['region']
+  #'region'에는 '서울', '인천', '경기', '대전', '충남', '충북', '강원'이 있다고 가정하자.
   df_reg.head(10)	
   > '서울' '대전' '서울' '인천' '대전' '대전' '서울' '인천' '인천' '경기'
+  
   #일 때, pandas의 .factorize() 메서드를 사용하면 각 카테고리가 정수 값으로 매칭된다.
   df_reg_encoded = df_reg.factorize()
   df_reg_encoded[:10]
@@ -94,7 +95,8 @@ tag: Machine-Learning
   - __원-핫 인코딩(one-hot encoding)__ : 범주형 특성의 값이 정해질 때 1이 되고, 다른 값이 0이 되도록 한다. 위의 예를 원-핫 인코딩으로 표현해보자. 사이킷런에서는 OneHotEncoder를 통해 숫자로 된 범주형 값을 원-핫 벡터로 바꿀 수 있다.
 
   ```python
-  #df_reg.head(10)을 원-핫 인코딩으로 표현한 후 toarray()를 사용해 넘파이 배열로 변형하면,
+  #df_reg.head(10)을 원-핫 인코딩으로 표현한 후 toarray()를 사용해 넘파이 배열로 변형하면 다음과 같은 결과가 나온다.
+  
   from sklearn.preprocessing import OneHotEncoder
   encoder = OneHotEncoder()
   df_reg_1hot = encoder.fit_transform(df_reg_encoded)
@@ -105,7 +107,7 @@ tag: Machine-Learning
     [0, 0, 1, 0, 0, 0, 0],
     ...
     [0, 0, 1, 0, 0, 0, 0],
-    [0, 0, 0, 1, 0, 0, 0]]	#가 된다.
+    [0, 0, 0, 1, 0, 0, 0]]
   ```
 
 - 특성 스케일링 : 머신러닝 알고리즘은 숫자 특성들의 스케일이 많이 다르면 잘 작동하지 않는다. 따라서 값들의 스케일이 많이 차이나는 경우 특성의 범위를 통일하기 위한 방법을 사용한다.
@@ -140,6 +142,3 @@ tag: Machine-Learning
 
 ## 7) 론칭, 모니터링, 그리고 시스템 유지 보수
 
-
-
-[^norm]: 노름에 대한 정보는 [김태완님 블로그](http://taewan.kim/post/norm/) 를 참조하면 좋다.
