--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -124,7 +124,9 @@ tag: Machine-Learning
   Z = \frac{\bar{X}-m}{\sigma}
   $$
 
-  
+- 변환 파이프라인 : 연속된 변환을 순서대로 처리할 수 있도록 도와주는 Pipeline 클래스.
+
+
 
 <br/>
 
