--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -132,15 +132,20 @@ tag: Machine-Learning
 
 ## 5) 모델 선택과 훈련
 
-훈련 세트에서 훈련하고 평가
+- 훈련 세트에서 훈련하고 평가하기
+  - 
+- 교차 검증을 사용한 평가 : K-겹 교차 검증
+  - '폴드(fold)'라고 불리는 K개의 서브셋으로 무작위로 분할. 
 
 <br/>
 
 ## 6) 모델 세부 튜닝
 
-
-
-<br/>
-
-## 7) 론칭, 모니터링, 그리고 시스템 유지 보수
+- 세부 튜닝 방법
+  - 그리드 탐색 : 우리의 탐색 방법에 맞는 하이퍼 파라미터를 찾아야 합니다. 사이킷런에서는 이를 위한 _GridSearchCV_ 라는 API를 제공한다. _GridSearchCV_ 는 가능한 모든 하이퍼 파라미터 조합을 탐색하고 그 조합에 대해 모두 교차 검증을 사용한다.
+- 랜덤 탐색
+  - 하이퍼 파라미터의 조합의 개수가 많아지면 _GridSearchCV_ 를 사용하기에 컴퓨터 자원이 너무 많이 소모된다. 그럴 때는 _RandomizedSearchCV_ 를 사용하는 것이 좋다. 후자는 모든 조합 대신 임의의 수를 대입하여 지정한 횟수만큼 평가를 진행한다. 예를 들어, 랜덤 탐색을 1,000회 반복하도록 실행하면 하이퍼파라미터마다 각기 다른 1,000개의 값을 탐색한다.
+- 앙상블(Ensemble) 방법 : 최상의 모델들을 연결하여 더 나은 성능을 발휘하는 그룹을 만드는 방법.
+- 최상의 모델과 오차분석
+- 테스트 세트로 시스템 평가 : 테스트 세트에서 최종 모델을 평가해본다. 이 과정에서 테스트 세트에서 성능이 약간 낮아진다고 하이퍼 파라미터를 다시 수정하면 안된다. 만약 수정하면 테스트 세트에 대한 성능을 올라갈 지 모르나, 새로운 데이터에 대해서는 일반화 되기 어렵기 때문.
 
