--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -108,6 +108,8 @@ tag: Machine-Learning
     ...
     [0, 0, 1, 0, 0, 0, 0],
     [0, 0, 0, 1, 0, 0, 0]]
+  
+  #(책에는 나와있지 않지만) pandas의 .get_dummies()를 활용하여 원-핫 인코딩을 진행하는 방법도 있다.
   ```
 
 - 특성 스케일링 : 머신러닝 알고리즘은 숫자 특성들의 스케일이 많이 다르면 잘 작동하지 않는다. 따라서 값들의 스케일이 많이 차이나는 경우 특성의 범위를 통일하기 위한 방법을 사용한다.
