--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Start :)
-category: Daily
-tag: Daily
+title: 3. Classification
+category: Hands on Machine Learning
+tag: Machine-Learning
 ---
 
  
