--- a/_posts/2020-01-28-homl1.md
+++ b/_posts/2020-01-28-homl1.md
@@ -74,8 +74,10 @@ tag: Machine-Learning
 
 ![TrainTestSet](https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Machine_learning_nutshell_--_Split_into_train-test_set.svg/640px-Machine_learning_nutshell_--_Split_into_train-test_set.svg.png)
 
-_(내용추가바람)_
+모델이 얼마나 잘 만들어졌는지 알기 위해서는 데이터를 실제로 적용해봐야 한다. 그러나 가지고 있는 모든 데이터를 활용해 훈련을 한 후에 출시한 모델의 성과가 좋지 않다면 고객은 불만을 토로할 것. 그래서 가지고 있는 데이터를 훈련 세트(Training set)와 테스트 세트(Test set)으로 나눈다. (일반적으로는 데이터의 80%로 훈련 세트를 만들고 20%로는 테스트 세트를 만든다.)
+
+하지만 테스트 세트도 1번만 사용 가능하기 때문에 테스트 세트 전에 모델을 시험해 볼 세트가 또 필요하다. 그것을 검증(Validation)세트라고 한다. (수능[Test set] 전에 모의고사[Validation set]를 보는 것과 같이.) 훈련 데이터의 일부분을 나누어 검증 세트를 만든다. 이 과정에서 검증 세트에 너무 많은 데이터를 할당하지 않기 위해 일반적으로 교차 검증 이라는 기법을 사용한다. (교차 검증에 대한 내용은 다음 게시물에 등장합니다.)
 
 <br/>
 
-※ 첫 단원부터 다양한 머신러닝 기법을 설명하면서 듣도 보도 못한 용어가 많이 등장하여 당황하신 분도 계실 것입니다. 이번 단원에서는 그냥 이런 기법들이 있다는 것, 그리고 이후에 등장한다는 것만 알아두시고 넘어가면 좋을 것 같습니다.
+※ 첫 단원부터 다양한 머신러닝 기법을 설명하면서 듣도 보도 못한 용어가 많이 등장하여 당황하신 분도 계실 것입니다. 이번 단원에서는 그냥 이런 기법들이 있다는 것, 그리고 이후에 등장한다는 것만 알아두시고 넘어가면 좋을 것 같습니다. 
