--- a/_posts/2020-01-29-homl2.md
+++ b/_posts/2020-01-29-homl2.md
@@ -135,9 +135,9 @@ tag: Machine-Learning
 ## 5) 모델 선택과 훈련
 
 - 훈련 세트에서 훈련하고 평가하기
-  - 
+  - 1장에서 말했듯 훈련 세트에서 훈련한 것으로 1번의 테스트 세트를 통한 평가를 받고 제품을 출시하기엔 너무 많은 위험이 있다. 따라서 아래와 같이 훈련 세트 내에 검증을 위한 세트를 만들어 테스트 세트 이전에 평가를 받는다. 
 - 교차 검증을 사용한 평가 : K-겹 교차 검증
-  - '폴드(fold)'라고 불리는 K개의 서브셋으로 무작위로 분할. 
+  - '폴드(fold)'라고 불리는 K개의 서브셋으로 무작위로 분할한 후 그 중 하나를 검증 세트로 하는 K개의 데이터 셋을 만든다.<br/> (이미지 추가하기)
 
 <br/>
 
