--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -9,11 +9,33 @@ tag: Machine-Learning
 
 ## 1) MNIST
 
+미국 고등학생과 인구조사국 직원들이 쓴 손글씨 데이터(0 부터 9 까지)이다. 총 데이터 셋의 개수는 7만 개이다. 6만 개를 훈련 세트로, 1만 개를 테스트 세트로 각각 할당한다.
 
+```python
+X_train, X_test, y_train, y_test = X[:60000], X[60000:], y[:60000], y[60000:]
+```
+
+
+
+<br/>
 
 ## 2) 이진 분류기
 
+문제를 단순화해보자. 이를테면, 5인 것과 5가 아닌 것으로 분류하기로 하자. 이렇게 O와 X, 2개의 클래스로 분류하는 것을 이진 분류기(binary classifier)라고 한다. 본 문제에서는 이진 분류 모델로 확률적 경사 하강법(Stochastic Gradient Descent, SGD)을 사용한다. 사이킷런에서는 SGDClassifier를 제공한다.
 
+```python
+y_train_5 = (y_train == 5)
+y_test_5 = (y_test == 5)
+
+from sklearn.linear_model import SGDClassifier
+
+sgd_clf = SGDClassifier(max_iter=5, random_state=42)
+sgd_clf.fit(X_train, y_train_5)
+```
+
+
+
+<br/>
 
 ## 3) 성능 측정
 
@@ -96,8 +118,39 @@ tag: Machine-Learning
 
 - __ROC 곡선__ (Receiver Operating Characteristic, 수신기 조작 특성) : 이진분류에서 널리 사용된다. 정밀도/재현율 곡선과 비슷하지만 다르다.
 
-  - 거짓 양성 비율(FPR)에 대한 진짜 양성 비율(TPR, 재현율)의 곡선. 1에서 음성으로 정확하게 분류한 음성 샘플의 비율으
-  - 
+  - 거짓 양성 비율(FPR)에 대한 진짜 양성 비율(TPR, 재현율)의 곡선. 음성으로 정확하게 분류한 음성 샘플의 비율으로 구한다. FPR은 1에서 진짜 음성 비율(TNR, 특이도)을 뺀 값과도 같다.
+  
+  $$
+  ROC\quad Curve = \frac{TPR}{FPR} = \frac{TPR}{1-TNR}
+  $$
+  
+  - AUC : ROC 곡선 아래의 면적을 AUC라고 한다. 완전 랜덤한 분류기의 AUC는 0.5이며 완벽한 분류기의 AUC는 1입니다. 
+  
+  ![AUC](https://t1.daumcdn.net/cfile/tistory/262E8E3F544837AD27)
+  
+  
+
+<br/>
+
+## 4) 다중 분류
+
+
+
+<br/>
+
+## 5) 에러 분석
+
+
+
+<br/>
+
+## 6) 다중 레이블 분류
+
+ 
+
+<br/>
+
+## 7) 다중 출력 분류
 
 
 
