--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -78,13 +78,11 @@ sgd_clf.fit(X_train, y_train_5)
 
   - 오차 행렬의 행은 실제 클래스를 나타내고 열은 예측 클래스를 나타낸다.
 
-  ```markdown
   |              | 5 가 아닌 것으로 판단 | 5 로 판단 |
-  |--------------|-----------------------|-----------|
+  | ------------ | --------------------- | --------- |
   | 실제로 5 (X) | 53272                 | 1307      |
   | 실제로 5 (O) | 1077                  | 4344      |
-  ```
-
+  
 - 정밀도와 재현율
 
   - __정밀도__ (Precision)
@@ -93,13 +91,13 @@ sgd_clf.fit(X_train, y_train_5)
   Precision = \frac{TP}{TP+FP}
   $$
 
-  ​		$TP$ : 진짜 양성의 수,  $FP$ : 거짓 양성의 수
+  ​			$TP$ : 진짜 양성의 수,  $FP$ : 거짓 양성의 수
 
   - __재현율__ (Recall) : 민감도(sensitivity) 또는 진짜 양성 비율(true positive)이라고도 함
     $$
     Recall = \frac{TP}{TP+FN}
     $$
-    $FN$ : 거짓 음성의 수
+    ​	$FN$ : 거짓 음성의 수
 
   - __F1 점수__ (F1 Score) : 정밀도와 재현율의 조화평균으로 구해진다
 
@@ -115,6 +113,8 @@ sgd_clf.fit(X_train, y_train_5)
   ```
 
   - __정밀도/재현율 트레이드오프__ : 정밀도를 올리면 재현율이 줄고, 재현율을 높이면 정밀도가 내려감. 재현율에 대한 정밀도 그래프를 그려 적정 지점을 찾아내야 한다.
+
+
 
 - __ROC 곡선__ (Receiver Operating Characteristic, 수신기 조작 특성) : 이진분류에서 널리 사용된다. 정밀도/재현율 곡선과 비슷하지만 다르다.
 
