--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -114,7 +114,7 @@ F = \frac{2}{(1/Precision)+(1/Recall)} = \frac{TP}{TP+\frac{FN+FP}{2}}
 f1_score(y_train_5, y_train_pred)
   ```
   
-  - __정밀도/재현율 트레이드오프__ : 정밀도를 올리면 재현율이 줄고, 재현율을 높이면 정밀도가 내려감. 재현율에 대한 정밀도 그래프를 그려 적정 지점을 찾아내야 한다.
+  - __정밀도/재현율 트레이드오프__ : 정밀도를 올리면 재현율이 줄고, 재현율을 높이면 정밀도가 내려가기 마련. 특정 수치가 강조되어야 할 경우에는 분류의 결정 임곗값(Threshold)을 설정하여 정밀도 또는 재현율의 수치를 확보할 수 있다. 사이킷런의 분류 알고리즘은 개별 레이블 별로 결정 확률을 구한 후, 예측 확률이 큰 쪽을 예측하게 된다. (이진 분류기의 경우 50:50.) 사이킷런에서는 예측 확률을 반환하는 predict_proba() 메서드를 제공한다.  
 
 
 
