--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -126,7 +126,7 @@ f1_score(y_train_5, y_train_pred)
   ROC\quad Curve = \frac{TPR}{FPR} = \frac{TPR}{1-TNR}
   $$
   
-  - AUC : ROC 곡선 아래의 면적을 AUC라고 한다. 완전 랜덤한 분류기의 AUC는 0.5이며 완벽한 분류기의 AUC는 1입니다. 
+  - **AUC** : ROC 곡선 아래의 면적을 AUC라고 한다. 완전 랜덤한 분류기의 AUC는 0.5이며 완벽한 분류기의 AUC는 1이다. 
   
   ![AUC](https://t1.daumcdn.net/cfile/tistory/262E8E3F544837AD27)
   
@@ -136,27 +136,66 @@ f1_score(y_train_5, y_train_pred)
 
 ## 4) 다중 분류
 
+다중 분류기는 둘 이상의 클래스를 구분할 수 있다. 다중 분류기는 크게 두 가지로 나뉨
+
+- 여러 개의 클래스를 직접 처리할 수 있는 다중 분류기 : 랜덤 포레스트, 나이브 베이즈 등
+
+- 이진 분류만 가능한 가능한 분류기 : 서포트 벡터 머신(SVM), 선형 분류기 등
+
+  - 일대다(One-versus-All, OvA) 전략 : 특정 클래스 하나만 구분하는 이진 분류기 10개를 훈련시켜 결정 점수 중에서 가장 높은 클래스를 선택하는 방법
+  - 일대일(One-versus-One, OvO) 전략 : 각 클래스의 조합마다 이진 분류기를 훈련시키는 것. 클래스가 $N$ 개일 경우 $N*(N-1)/2$ 개의 이진 분류기가 필요함.
+  - SVM 같은 특정 이진 분류 알고리즘은 훈련 세트의 크기에 민감하기 때문에 훈련 세트가 작은 OvO를 선호하지만, 대부분의 이진분류 알고리즘은 OvA를 선호한다. 사이킷런에서 OvO나 OvA를 사용하도록 강제하려면 OneVsOneClassifier나 OneVsRestClassifier를 사용한다. 예를 들어, SGDClassifier로 OvO 전략을 사용하고자 한다면 다음과 같은 코드를 사용하면 된다.
+
+  ```python
+  from sklearn.multiclass import OneVsOneClassifier
+  ovo_clf = OneVsOneClassifier(SGDClassifier(max_iter=5, random_state=42))
+  ovo_clf.fit(X_train, y_train)
+  ```
+
+만약 샘플을 바로 다중 클래스로 분류할 수 있는 랜덤 포레스트 같은 경우에는 OvO나 OvA를 적용할 필요가 없다. predict_proba() 메서드를 호출하면 분류기가 각 샘플에 부여한 클래스별 확률을 얻을 수 있음.
+
+```python
+forest_clf.fit(X_train, y_train)
+```
+
 
 
 <br/>
 
 ## 5) 에러 분석
 
+모델의 성능을 향상시키기 위해 에러의 종류를 분석.
 
+- 오차 행렬 살펴보기
+
+```python
+y_train_pred = cross_val_predict(sgd_clf, X_train_scaled, y_train, cv=3)
+#X_train_scaled는 X_train을 StandardScaler()로 표준화를 진행한 데이터
+conf_mx = confusion_matrix(y_train, y_train_pred)
+```
+
+오차 행렬을 분석하여 분류기의 성능 향상 방안에 대한 통찰을 얻는다. 분류가 잘 되지 않는 클래스가 어떤 것인지 확인하고, 그 클래스에 해당하는 데이터를 더 모으거나 분류기에 도움 될 만한 특성을 더 찾아볼 수 있다. 
 
 <br/>
 
 ## 6) 다중 레이블 분류
 
- 
+ 분류기가 샘플마다 여러 개의 클래스를 출력해야 하는 경우도 있음. 여러 명이 등장하는 사진에 어떤 사람이 있는지 판단하기 위해서는 한 장의 사진에 여러 개의 레이블을 할당해야 함. MNIST 예제로 다중 레이블 분류의 예를 살펴보자.
+
+```python
+from sklearn.neighbors import KNeighborsClassifier
+y_train_large = (y_train >= 7)
+y_train_odd = (y_train % 2 == 1)
+y_multilabel = np.c_[y_train_large, y_train_odd]
+# 해당 손글씨가 7보다 큰 숫자를 쓴 것인지, 그리고 홀수를 쓴 것인지 동시에 판단
+knn_clf = KNeighborsClassifier()
+knn_clf.fit(X_train, y_multilabel)
+```
 
 <br/>
 
 ## 7) 다중 출력 분류
 
+**다중 출력 다중 클래스 분류** (다중 출력 분류) : 다중 레이블 분류에서 한 레이블이 다중 클래스가 될 수 있도록 일반화한 것. MNIST 이미지의 노이즈를 제거하는 시스템을 만든다고 해보자. 분류기의 출력이 다중 레이블(1픽셀당 1레이블)이고 각 레이블은 여러 개의 값(0~255의 픽셀 농도)을 가짐. 그러면 이 시스템은 다중 출력 분류 시스템이 되어야 한다.
 
-
-
-
-
-
+:black_nib: 이 예시에서처럼 분류와 회귀 사이의 경계는 때때로 모호. 레이블의 픽셀 농도는 분류보다 회귀와 비슷. 게다가 다중 출력 시스템이 분류 작업에 국한되지도 않음.
