--- a/_posts/2020-01-30-homl3.md
+++ b/_posts/2020-01-30-homl3.md
@@ -198,4 +198,4 @@ knn_clf.fit(X_train, y_multilabel)
 
 **다중 출력 다중 클래스 분류** (다중 출력 분류) : 다중 레이블 분류에서 한 레이블이 다중 클래스가 될 수 있도록 일반화한 것. MNIST 이미지의 노이즈를 제거하는 시스템을 만든다고 해보자. 분류기의 출력이 다중 레이블(1픽셀당 1레이블)이고 각 레이블은 여러 개의 값(0~255의 픽셀 농도)을 가짐. 그러면 이 시스템은 다중 출력 분류 시스템이 되어야 한다.
 
-:black_nib: 이 예시에서처럼 분류와 회귀 사이의 경계는 때때로 모호. 레이블의 픽셀 농도는 분류보다 회귀와 비슷. 게다가 다중 출력 시스템이 분류 작업에 국한되지도 않음.
+[이 예시에서처럼 분류와 회귀 사이의 경계는 때때로 모호. 레이블의 픽셀 농도는 분류보다 회귀와 비슷. 게다가 다중 출력 시스템이 분류 작업에 국한되지도 않음.]
