--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -19,7 +19,7 @@ $$
 
 위의 식을 벡터 형태로 나타내면
 $$
-\hat{y} = h_w(\bold{x}) =  w^T \sdot{\bold{x}}
+\hat{y} = h_w(\mathbf{x}) =  w^T \cdot{\mathbf{x}}
 $$
 
 - $h_w$ : 가설 함수
@@ -28,11 +28,11 @@ $$
 
 [2장]([https://yngie-c.github.io/hands%20on%20machine%20learning/2020/01/29/homl2/](https://yngie-c.github.io/hands on machine learning/2020/01/29/homl2/)) 에서 회귀모델에 가장 널리 사용되는 지표를 평균 제곱근 오차(RMSE)라고 하였음. 실제로는 RMSE와 같은 결과를 내면서 더 간단한 평균 제곱 오차(Mean Square Error, MSE)를 사용한다.
 $$
-MSE(\bold{X}, h_w) = \frac{1}{m}\sum_{i=1}^m( w^T\sdot\bold{x}^{(i)} - y^{(i)})^2
+MSE(\mathbf{X}, h_w) = \frac{1}{m}\sum_{i=1}^m( w^T\cdot\mathbf{x}^{(i)} - y^{(i)})^2
 $$
 **정규 방정식** : 비용 함수를 최소화 하는 해석적인 방법 (자세한 설명은 [이곳]([https://ko.wikipedia.org/wiki/%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95#%EC%84%A0%ED%98%95_%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95](https://ko.wikipedia.org/wiki/최소제곱법#선형_최소제곱법)) 을 참조하자)
 $$
-\hat{w} = (\bold{X}^T \sdot \bold{X})^{-1} \sdot \bold{X}^T \sdot \bold{y}
+\hat{w} = (\bold{X}^T \cdot \mathbf{X})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}
 $$
 
 - $\hat{w}$ 는 비용 함수를 최소화하는 $w$ 의 값
@@ -46,7 +46,7 @@ X_b = np.c_[np.ones((100, 1)), X]
 theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)
 ```
 
-정규 방정식의 계산 복잡도 : $(\bold{X}^T \sdot \bold{X})^{-1}$ 을 구하기 위한 계산 복잡도(Computational Complexity)는 샘플의 수 $m$ 에 대해서는 $O(m)$ , 특성 수 $n$ 에 대해서는 일반적으로 $O(n^{2.4})$ 에서 $O(n^{3})$ 사이를 나타낸다. 즉, 특성 수가 늘어날수록 정규 방정식을 이용한 방법은 계산 시간이 훨씬 더 오래 걸리게 된다.
+정규 방정식의 계산 복잡도 : $(\mathbf{X}^T \cdot \mathbf{X})^{-1}$ 을 구하기 위한 계산 복잡도(Computational Complexity)는 샘플의 수 $m$ 에 대해서는 $O(m)$ , 특성 수 $n$ 에 대해서는 일반적으로 $O(n^{2.4})$ 에서 $O(n^{3})$ 사이를 나타낸다. 즉, 특성 수가 늘어날수록 정규 방정식을 이용한 방법은 계산 시간이 훨씬 더 오래 걸리게 된다.
 
 <br/>
 
@@ -65,12 +65,12 @@ theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)
 
 **배치 경사 하강법** : 경사 하강법을 구현하려면 모델의 각 파라미터 $w_j$ 에 대해서 비용 함수의 그래디언트를 계산. 이를 위해서는 **편도함수** (Partial Derivative)를 구해야 한다. 파라미터 $w_j$ 에 대한 비용 함수의 편도함수는 다음과 같다.
 $$
-\frac{\part}{\part w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \sdot \bold{x}^{(i)} - y^{(i)})x^{(i)}_j
+\frac{\part}{\part w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \cdot \mathbf{x}^{(i)} - y^{(i)})x^{(i)}_j
 $$
 
 편도함수는 아래의 식을 사용해 한꺼번에 계산할 수도 있다. [^2]
 $$
-\nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\part}{\part w_0}MSE(w) \\ \frac{\part}{\part w_1}MSE(w) \\ ... \\ \frac{\part}{\part w_n}MSE(w) \end{array}\right] = \frac{2}{m}\bold{X}^T \sdot (\bold{X} \sdot w - \bold{y})
+\nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\part}{\part w_0}MSE(w) \\ \frac{\part}{\part w_1}MSE(w) \\ ... \\ \frac{\part}{\part w_n}MSE(w) \end{array}\right] = \frac{2}{m}\mathbf{X}^T \cdot (\mathbf{X} \cdot w - \mathbf{y})
 $$
 그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.
 $$
