--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -24,7 +24,7 @@ $$
 
 - $h_w$ : 가설 함수
 - $w^T$ : 모델 파라미터 벡터
-- $\bold{x}$ : 샘플의 특성 벡터
+- $\mathbf{x}$ : 샘플의 특성 벡터
 
 [2장]([https://yngie-c.github.io/hands%20on%20machine%20learning/2020/01/29/homl2/](https://yngie-c.github.io/hands on machine learning/2020/01/29/homl2/)) 에서 회귀모델에 가장 널리 사용되는 지표를 평균 제곱근 오차(RMSE)라고 하였음. 실제로는 RMSE와 같은 결과를 내면서 더 간단한 평균 제곱 오차(Mean Square Error, MSE)를 사용한다.
 $$
@@ -36,7 +36,7 @@ $$
 $$
 
 - $\hat{w}$ 는 비용 함수를 최소화하는 $w$ 의 값
-- $\bold{y}$ 는 $y_1$ 부터 $y_m$ 까지 포함하는 타깃 벡터
+- $\mathbf{y}$ 는 $y_1$ 부터 $y_m$ 까지 포함하는 타깃 벡터
 
 정규 방정식을 이용해 $\hat{w}$ 를 구해보자
 
@@ -65,12 +65,12 @@ theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)
 
 **배치 경사 하강법** : 경사 하강법을 구현하려면 모델의 각 파라미터 $w_j$ 에 대해서 비용 함수의 그래디언트를 계산. 이를 위해서는 **편도함수** (Partial Derivative)를 구해야 한다. 파라미터 $w_j$ 에 대한 비용 함수의 편도함수는 다음과 같다.
 $$
-\frac{\part}{\part w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \cdot \mathbf{x}^{(i)} - y^{(i)})x^{(i)}_j
+\frac{\partial}{\partial w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \cdot \mathbf{x}^{(i)} - y^{(i)})x^{(i)}_j
 $$
 
 편도함수는 아래의 식을 사용해 한꺼번에 계산할 수도 있다. [^2]
 $$
-\nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\part}{\part w_0}MSE(w) \\ \frac{\part}{\part w_1}MSE(w) \\ ... \\ \frac{\part}{\part w_n}MSE(w) \end{array}\right] = \frac{2}{m}\mathbf{X}^T \cdot (\mathbf{X} \cdot w - \mathbf{y})
+\nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\partial}{\partial w_0}MSE(w) \\ \frac{\partial}{\partial w_1}MSE(w) \\ ... \\ \frac{\partial}{\partial w_n}MSE(w) \end{array}\right] = \frac{2}{m}\mathbf{X}^T \cdot (\mathbf{X} \cdot w - \mathbf{y})
 $$
 그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.
 $$
@@ -100,6 +100,14 @@ sgd_reg.fit(X, y.ravel())
 <br/>
 
 ## 3) 다항 회귀
+
+직선보다 복잡한 데이터셋의 경우. 비선형 데이터를 학습하는 데 선형 모델을 사용할 수 있음. 각 특성의 거듭제곱을 새로운 특성으로 추가하고, 이 확장된 특성을 포함한 데이터셋에 선형 모델을 훈련시키기 때문. 이것을 **다항 회귀** (Polynomial Regression)라고 함. 사이킷런에서는 거듭제곱 특성 생성을 위해 PolynomialFeatures() 라는 클래스를 제공한다.
+
+```python
+from sklearn.preprocessing import PolynomialFeatures
+poly_features = PolynomialFeatures(degree=2, include_bias=False)
+X_poly = ploy_features.fit_transform(X)
+```
 
 
 
