--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -30,10 +30,13 @@ $$
 $$
 MSE(\mathbf{X}, h_w) = \frac{1}{m}\sum_{i=1}^m( w^T\cdot\mathbf{x}^{(i)} - y^{(i)})^2
 $$
+
+
 **정규 방정식** : 비용 함수를 최소화 하는 해석적인 방법 (자세한 설명은 [이곳]([https://ko.wikipedia.org/wiki/%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95#%EC%84%A0%ED%98%95_%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95](https://ko.wikipedia.org/wiki/최소제곱법#선형_최소제곱법)) 을 참조하자)
 $$
-\hat{w} = (\bold{X}^T \cdot \mathbf{X})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}
+\hat{w} = (\mathbf{X}^T \cdot \mathbf{X})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}
 $$
+
 
 - $\hat{w}$ 는 비용 함수를 최소화하는 $w$ 의 값
 - $\mathbf{y}$ 는 $y_1$ 부터 $y_m$ 까지 포함하는 타깃 벡터
@@ -41,7 +44,7 @@ $$
 정규 방정식을 이용해 $\hat{w}$ 를 구해보자
 
 ```python
-import
+import numpy as np
 X_b = np.c_[np.ones((100, 1)), X]
 theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)
 ```
@@ -68,14 +71,19 @@ $$
 \frac{\partial}{\partial w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \cdot \mathbf{x}^{(i)} - y^{(i)})x^{(i)}_j
 $$
 
+
 편도함수는 아래의 식을 사용해 한꺼번에 계산할 수도 있다. [^2]
 $$
 \nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\partial}{\partial w_0}MSE(w) \\ \frac{\partial}{\partial w_1}MSE(w) \\ ... \\ \frac{\partial}{\partial w_n}MSE(w) \end{array}\right] = \frac{2}{m}\mathbf{X}^T \cdot (\mathbf{X} \cdot w - \mathbf{y})
 $$
+
+
 그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.
 $$
 w^{d+1} = w^d - \eta \nabla_w MSE(w)
 $$
+
+
 여기서 그래디언트 벡터에 곱해줄 적절한 학습률을 찾기 위해 그리드 탐색을 사용한다. 그리드 탐색에서 수렴하는데 너무 오래 걸리는 모델을 막기 위해 반복 횟수를 제한해야 한다. 반복 횟수가 너무 작으면  최적점에 도달하기 전에 알고리즘이 멈추고, 너무 크면 모델 파라미터가 변하지 않는 동안 시간을 낭비하게 된다.  그래서 일반적으로 반복 횟수는 크게 하되 그래디언트 벡터가 특정 값($\epsilon$)[^3]보다 작아지면 알고리즘을 중지하는 방법을 사용한다.
 
 **확률적 경사 하강법** (Stochastic Gradient Descent) : 배치 경사 하강법은 매 스텝마다 전체 훈련 세트를 이용하여 그래디언트를 계산하므로 훈련 세트가 커지면 시간이 오래 걸린다는 단점이 있다. 반대로 확률적 경사 하강법은 매 스텝에서 딱 한 개의 샘플을 무작위로 선택하고 그 하나의 샘플에 대한 그래디언트를 계산한다. 반복마다 사용되는 데이터의 양이 적기 때문에 알고리즘이 훨씬 빠르다.
@@ -101,21 +109,20 @@ sgd_reg.fit(X, y.ravel())
 
 ## 3) 다항 회귀
 
-직선보다 복잡한 데이터셋의 경우. 비선형 데이터를 학습하는 데 선형 모델을 사용할 수 있음. 각 특성의 거듭제곱을 새로운 특성으로 추가하고, 이 확장된 특성을 포함한 데이터셋에 선형 모델을 훈련시키기 때문. 이것을 **다항 회귀** (Polynomial Regression)라고 함. 사이킷런에서는 거듭제곱 특성 생성을 위해 PolynomialFeatures() 라는 클래스를 제공한다.
+직선보다 복잡한 데이터셋의 경우. 비선형 데이터를 학습하는 데 선형 모델을 사용할 수 있음. 각 특성의 거듭제곱을 새로운 특성으로 추가하고, 이 확장된 특성을 포함한 데이터셋에 선형 모델을 훈련시키기 때문. 이것을 **다항 회귀** (Polynomial Regression)라고 함. 사이킷런에서는 거듭제곱 특성 생성을 위해 PolynomialFeatures() 라는 클래스를 제공한다.[^4]
 
 ```python
 from sklearn.preprocessing import PolynomialFeatures
 poly_features = PolynomialFeatures(degree=2, include_bias=False)
 X_poly = ploy_features.fit_transform(X)
+# degree로 모델의 차수를 정하고 fit_transform()을 이용하여 특성을 생성해준다.
 ```
-
-
 
 <br/>
 
 ## 4) 학습 곡선
 
-
+degree를 많이 높여 고차 다항 회귀를 적용하면 선형 회귀에서보다 훨씬 더 훈련 데이터에 잘 맞추려 한다. 이런 현상은 과적합을 유발한다.
 
 <br/>
 
@@ -133,3 +140,6 @@ X_poly = ploy_features.fit_transform(X)
 [^2]: 이 공식은 매 경사 하강법 스텝에서 전체 훈련 세트 X에 대해 훈련한다. 때문에 이 알고리즘을 배치 경사 하강법(Batch Gradient Descent)이라고 한다. 배치 경사 하강법은 모든 데이터 셋을 사용하기 때문에 훈련 세트가 커질수록 매우 느려진다. 하지만 특성의 수에는 민감하지 않으므로 특성의 수가 많을 때는 정규 방정식보다 경사 하강법을 사용한다.
 [^3]: 비용 함수의 모양에 따라 달라지겠지만 특정 값($\epsilon$) 의 범위 안에서 최적의 솔루션에 도달하기 위해서는 $O(1/\epsilon)$ 의 반복이 걸릴 수 있다. 즉,  $\epsilon$ 을 줄일수록 반복 횟수는 늘어나게 된다.  
 
+
+
+[^4]: PolynomialFeatures(degree=d)는 특성이 n개인 배열을 특성이 $\frac{(n+d)!}{d!n!}$ 개인 배열로 변환한다. 특성 수가 엄청나게 늘어날 수 있으니 주의.
