--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -122,13 +122,104 @@ X_poly = ploy_features.fit_transform(X)
 
 ## 4) 학습 곡선
 
-degree를 많이 높여 고차 다항 회귀를 적용하면 선형 회귀에서보다 훨씬 더 훈련 데이터에 잘 맞추려 한다. 이런 현상은 과적합을 유발한다.
+degree를 많이 높여 고차 다항 회귀를 적용하면 선형 회귀에서보다 훨씬 더 훈련 데이터에 잘 맞추려 한다. 이런 현상은 과적합을 유발한다. 모델이 과적합인지 과소적합인지 알 수 있는 첫 번째 방법은 교차 검증이다. 훈련 데이터에서 모델의 성능이 좋지만 교차 검증 점수가 낮다면 그 모델은 과적합, 둘 모두의 점수가 낮다면 그 모델은 과소적합 되었다고 말합니다.
+
+다음 방법은 **학습 곡선** 을 이용하는 것. 이 곡선은 훈련 세트와 검증 세트의 모델 성능을 훈련 세트 크기의 함수로 나타낸다. 곡선을 그리기 위해서는 다른 크기의 훈련 세트의 서브셋을 만들어 여러 번 훈련시키면 된다. 곡선을 정의하는 함수는 다음과 같다.
+
+```python
+from sklearn.metrics import mean_squared_error
+from sklearn_model_selection import train_test_split
+import matplotlib.pyplot as plt
+
+def plot_learning_curves(model, X, y):
+    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)
+    train_errors, val_errors = [], []
+    
+    for m in range(1, len(X_train)):
+        model.fit(X_train[:m], y_train[:m])
+        y_train_predict = model.predict(X_train[:m])
+        y_val_predict = model.predict(X_val)
+        train_errors.append(mean_squared_error(y_train[:m], y_train_predict))
+        val_errors.append(mean_squared_error(y_val, y_val_predict))
+    
+    plt.plot(np.sqrt(train_errors), label="train_set")
+    plt.plot(np.sqrt(val_errors), label="val_set")
+```
+
+- 과소적합 학습 모델의 학습 곡선 그래프(아래 그래프는 단순 선형 회귀 모델)
+
+<img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in04.png" alt="Underfitting" style="zoom: 33%;" />
+
+먼저 Training set의 그래프(빨간색)를 보면, 훈련 세트에 샘플이 한 개 혹은 두 개일 때는 모델이 완벽하게 작동한다. 그러나 샘플이 점점 추가되면서 모델이 훈련 데이터를 완벽히 학습하는 것이 불가능해진다. 그래서 오차가 일정 수준까지 계속 상승하게 된다. Validation set의 그래프(파란색)를 보면, 샘플이 적을 때는 제대로 일반화가 되지 않아 오차가 크지만, 샘플이 추가될수록 오차 감소가 완만해져서 훈련 세트와 그래프가 가까워진다. 
+
+- 과대적합 학습 모델의 학습 곡선 그래프(아래 그래프는 10차 다항 회귀 모델)
+
+<img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in05.png" alt="Overfitting" style="zoom:33%;" />
+
+먼저 Training set의 그래프(빨간색)를 보면, 10차원 모델이므로 샘플 수가 10개 일 때까지는 오차가 없다가 이후부터 오차가 점점 증가하기 시작한다. Validation set의 그래프(파란색)를 보면, 처음에는 모든 데이터에 맞춰진 과적합때문에 오차가 매우 크지만 샘플 수가 많아질수록 오차가 낮아지게 된다.[^5]
+
+- 특징
+  - 샘플이 많을 때, 오차의 수준은 과소적합 모델(약 1.8)보다 과대적합 모델(약 0.8~1.1)이 더 낮다.
+  - 두 곡선 사이에는 존재하는 공간(즉, 훈련 세트와 검증 세트의 오차 차이)은 과대적합 모델이 더 크다. 이는 훈련 세트의 오차가 검증 데이터보다 훨씬 더 낮다는 뜻인데, 이는 과대적합 모델의 특징이다.
+
+※ **편향 / 분산 트레이드 오프** : 통상적으로 복잡도가 증가할수록, 모델의 분산이 늘어나고 편향은 줄어드는 현상.
+
+- 편향(Bias) : 잘못된 가정으로 인한 오차. 편향이 큰 모델은 훈련 데이터에 과소적합 되기 쉽다.
+- 분산(Variance) : 훈련 데이터에 있는 작은 변동에 모델이 과도하게 민감할 때 나타나는 오차. 분산이 큰 모델은 훈련 데이터에 과소적합 되기 쉽다.
+- 줄일 수 없는 오차 : 데이터 자체의 노이즈로 인한 오차. 이 오차는 데이터에서 노이즈를 제거해야만 없앨 수 있다.
 
 <br/>
 
 ## 5) 규제가 있는 선형 모델
 
+과대적합을 감소시키기 위한 규제 방법이 존재한다. 선형 회귀 모델에서는 보통 모델의 가중치를 제한함으로써 규제를 가한다.
 
+**릿지 회귀** (Ridge) : 티호노프(Tikhonov) 규제라고도 부른다. 규제항 $\alpha \sum_{i=1}^n w_1^2$ 이 비용함수에 추가된다. 학습 알고리즘을 데이터에 맞추는 것뿐만 아니라 모델의 가중치가 가능한 한 작게 유지되도록 한다. 규제항은 훈련하는 동안에만 비용함수에 추가되며, 훈련이 끝나면 모델의 성능을 규제가 없는 성능 지표로 평가한다.
+
+$\alpha = 0$ 이면 선형 회귀와 같고, $\alpha$ 가 커질수록 모든 가중치가 0에 가까워지면서 데이터의 평균을 지나는 수평선이 된다. 릿지 회귀의 비용 함수 $f(w)$ 는 아래와 같다.
+$$
+f(w) = MSE(w) + \alpha \frac{1}{2} \sum_{i=1}^n w_i^2
+$$
+식에서 볼 수 있듯, $w_0$ 은 규제되지 않으며, $\mathbf{w}^\prime$ 를 $w_1, w_2, ... , w_n$ 라고 정의하면 규제항은 $\frac{1}{2}(\Vert\mathbf{w}^\prime\Vert_2)^2$ 와 같다. 여기서 $\Vert \cdot \Vert_2$ 가 가중체 벡터의 $l_2$ 노름이다. 경사 하강법에 적용하려면 MSE 그래디언트 벡터 $(\nabla_w MSE(w))$ 에 $\alpha \mathbf{w}^\prime$ 을 더하면 된다.
+
+리지 회귀는 정규 방정식과 경사 하강법에 모두 사용 가능하며 릿지 회귀의 정규방정식은 $\hat{w} = (\mathbf{X}^T \cdot \mathbf{X} + \alpha \mathbf{A})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}$  이다. 두 방법의 장단점은 선형 회귀와 같다. 사이킷런에서는 릿지 회귀가 적용된 각각의 방법을 다음의 코드로 작동시킬 수 있다.
+
+```python
+# 정규 방정식
+from sklearn.linear_model import Ridge
+ridge_reg = Ridge(alpha=1, solver="cholesky")
+ridge_reg.fit(X, y)
+
+# 확률적 경사 하강법
+sgd_reg = SGDRegressor(max_iter=5, penalty="12")
+sgd_reg.fit(X, y.ravel())
+# penalty는 사용할 규제를 지정한다. "12"는 SGD의 비용 함수에 L2 노름의 제곱을 2로 나눈 규제항을 추가하게 한다. (즉, 릿지 회귀와 같다.)
+```
+
+**라쏘 회귀** (Lasso) : 라쏘 회귀는 비용 함수에 규제항을 더하지만 $l_2$ 노름의 제곱을 2로 나눈 것 대신 가중치 벡터의 $l_1$ 노름을 사용한다. 라쏘 회귀의 비용 함수 $J(w)$ 는 다음과 같다.
+$$
+J(w) = MSE(w) + \alpha \sum_{i=1}^n|w_i|
+$$
+라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.
+$$
+g(w,J) = \nabla_w MSE(w) + \left[\begin{array}{ccc} sign(w_1) \\ sign(w_2) \\ ... \\ sign(w_n) \end{array}\right] \quad 여기서 \quad sign(w_i) = \begin{cases} -1 \quad w_i < 0 \\ 0 \quad w_i = 0 \\ +1 \quad w_i > 0 \end{cases}
+$$
+사이킷런에서는 다음과 같은 코드로 라쏘 모델을 작동할 수 있다.
+
+```python
+# 정규 방정식
+from sklearn.linear_model import Lasso
+lasso_reg = Lasso(alpha=0.1)
+lasso_reg.fit(X, y)
+
+# 확률적 경사 하강법
+sgd_reg = SGDRegressor(max_iter=5, penalty="11")
+sgd_reg.fit(X, y.ravel())
+```
+
+
+
+**엘라스틱 넷** (Elastic Net) :  
 
 <br/>
 
@@ -140,6 +231,7 @@ degree를 많이 높여 고차 다항 회귀를 적용하면 선형 회귀에서
 [^2]: 이 공식은 매 경사 하강법 스텝에서 전체 훈련 세트 X에 대해 훈련한다. 때문에 이 알고리즘을 배치 경사 하강법(Batch Gradient Descent)이라고 한다. 배치 경사 하강법은 모든 데이터 셋을 사용하기 때문에 훈련 세트가 커질수록 매우 느려진다. 하지만 특성의 수에는 민감하지 않으므로 특성의 수가 많을 때는 정규 방정식보다 경사 하강법을 사용한다.
 [^3]: 비용 함수의 모양에 따라 달라지겠지만 특정 값($\epsilon$) 의 범위 안에서 최적의 솔루션에 도달하기 위해서는 $O(1/\epsilon)$ 의 반복이 걸릴 수 있다. 즉,  $\epsilon$ 을 줄일수록 반복 횟수는 늘어나게 된다.  
 
-
-
 [^4]: PolynomialFeatures(degree=d)는 특성이 n개인 배열을 특성이 $\frac{(n+d)!}{d!n!}$ 개인 배열로 변환한다. 특성 수가 엄청나게 늘어날 수 있으니 주의.
+[^5]: 과대적합 모델을 개선하는 한 가지 방법은 검증 오차가 훈련 오차에 근접할 때까지 더 많은 훈련 데이터를 추가하는 것.
+[^6]: 희소모델은 성분 중 0이 많은(즉, non-zero 값이 희소한 모델을 가리킨다.) 자세한 설명은 [이곳](https://dp-story.tistory.com/4) 을 참조하면 좋다.
+
