--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -68,7 +68,9 @@ theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)
 
 **배치 경사 하강법** : 경사 하강법을 구현하려면 모델의 각 파라미터 $w_j$ 에 대해서 비용 함수의 그래디언트를 계산. 이를 위해서는 **편도함수** (Partial Derivative)를 구해야 한다. 파라미터 $w_j$ 에 대한 비용 함수의 편도함수는 다음과 같다.
 $$
+\begin{equation}
 \frac{\partial}{\partial w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \cdot \mathbf{x}^{(i)} - y^{(i)})x^{(i)}_j
+\end{equation}
 $$
 
 
@@ -77,11 +79,11 @@ $$
 \nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\partial}{\partial w_0}MSE(w) \\ \frac{\partial}{\partial w_1}MSE(w) \\ ... \\ \frac{\partial}{\partial w_n}MSE(w) \end{array}\right] = \frac{2}{m}\mathbf{X}^T \cdot (\mathbf{X} \cdot w - \mathbf{y})
 $$
 
-
 그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.
 $$
 w^{d+1} = w^d - \eta \nabla_w MSE(w)
 $$
+
 
 
 여기서 그래디언트 벡터에 곱해줄 적절한 학습률을 찾기 위해 그리드 탐색을 사용한다. 그리드 탐색에서 수렴하는데 너무 오래 걸리는 모델을 막기 위해 반복 횟수를 제한해야 한다. 반복 횟수가 너무 작으면  최적점에 도달하기 전에 알고리즘이 멈추고, 너무 크면 모델 파라미터가 변하지 않는 동안 시간을 낭비하게 된다.  그래서 일반적으로 반복 횟수는 크게 하되 그래디언트 벡터가 특정 값($\epsilon$)[^3]보다 작아지면 알고리즘을 중지하는 방법을 사용한다.
@@ -148,13 +150,19 @@ def plot_learning_curves(model, X, y):
 
 - 과소적합 학습 모델의 학습 곡선 그래프(아래 그래프는 단순 선형 회귀 모델)
 
-<img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in04.png" alt="Underfitting" style="zoom: 33%;" />
+
+
+<p align="center">
+  <img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in04.png" alt="Underfitting" style="zoom: 33%;" />  
+</p>
 
 먼저 Training set의 그래프(빨간색)를 보면, 훈련 세트에 샘플이 한 개 혹은 두 개일 때는 모델이 완벽하게 작동한다. 그러나 샘플이 점점 추가되면서 모델이 훈련 데이터를 완벽히 학습하는 것이 불가능해진다. 그래서 오차가 일정 수준까지 계속 상승하게 된다. Validation set의 그래프(파란색)를 보면, 샘플이 적을 때는 제대로 일반화가 되지 않아 오차가 크지만, 샘플이 추가될수록 오차 감소가 완만해져서 훈련 세트와 그래프가 가까워진다. 
 
 - 과대적합 학습 모델의 학습 곡선 그래프(아래 그래프는 10차 다항 회귀 모델)
 
-<img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in05.png" alt="Overfitting" style="zoom:33%;" />
+<p align="center">
+    <img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in05.png" alt="Overfitting" style="zoom:33%;" />
+</p>
 
 먼저 Training set의 그래프(빨간색)를 보면, 10차원 모델이므로 샘플 수가 10개 일 때까지는 오차가 없다가 이후부터 오차가 점점 증가하기 시작한다. Validation set의 그래프(파란색)를 보면, 처음에는 모든 데이터에 맞춰진 과적합때문에 오차가 매우 크지만 샘플 수가 많아질수록 오차가 낮아지게 된다.[^5]
 
@@ -217,15 +225,33 @@ sgd_reg = SGDRegressor(max_iter=5, penalty="11")
 sgd_reg.fit(X, y.ravel())
 ```
 
+**엘라스틱 넷** (Elastic Net) : 엘라스틱 넷은 위의 두 모델(릿지 회귀, 라쏘 회귀)을 절충한 모델이다. 혼합 비율은 파라미터 $r$ 을 사용하여 조절한다. $r=0$ 이면 릿지 회귀와 같고, $r=1$ 이면 라쏘 회귀와 같아진다. 엘라스틱 넷의 비용 함수는 다음과 같다.
+$$
+J(w) = MSE(w) + r \alpha \sum_{i=1}^n|w_i| + \frac{1-r}{2} \alpha \sum_{i=1}^n w_i^2
+$$
+다음은 사이킷런에서 엘라스틱 넷을 작동시키는 방법이다. (r은 l1_ratio 값으로 조정할 수 있다.)
 
+```python
+from sklearn.linear_model import ElasticNet
+elastic_net = ElasticNet(alpha=0.1, l1_ratio=0.5)
+elastic_net.fit(X, y)
+```
 
-**엘라스틱 넷** (Elastic Net) :  
+어떤 규제 방법을 선택해야 할까? 일반적으로는 릿지를 기본으로 하지만, 중요한 특성의 수가 적다고 판단되면 라쏘나 엘라스틱 넷이 더 낫다. 그 중 특성 수($n$)가 훈련 샘플 수($m$) 보다 많거나 특성 몇 개가 강하게 연관되어 있을 때는 라쏘가 문제를 일으킬 수 있으므로 엘라스틱 넷을 선택한다.
+
+**조기 종료** (Early stopping) : 검증 에러가 최솟값에 도달하면 반복을 멈추고 훈련을 중지시키는 방법.
+
+<p align="center">
+    <img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_0415.png" alt="EarlyStopping" style="zoom:33%;" />
+</p>
 
 <br/>
 
 ## 6) 로지스틱 회귀
 
 
+
+<br/>
 
 [^1]: 이 함수의 도함수가 립시츠 연속(Lipschitz continuous). 립시츠 연속이란 어떤 함수의 도함수가 일정한 범위 안에서 변할 때 이 함수를 립시츠 연속 함수라고 한다. MSE는 x가 무한대일 때 기울기가 무한대가 되므로 국부적인(locally) 립시츠 함수. 
 [^2]: 이 공식은 매 경사 하강법 스텝에서 전체 훈련 세트 X에 대해 훈련한다. 때문에 이 알고리즘을 배치 경사 하강법(Batch Gradient Descent)이라고 한다. 배치 경사 하강법은 모든 데이터 셋을 사용하기 때문에 훈련 세트가 커질수록 매우 느려진다. 하지만 특성의 수에는 민감하지 않으므로 특성의 수가 많을 때는 정규 방정식보다 경사 하강법을 사용한다.
