--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -207,7 +207,7 @@ J(w) = MSE(w) + \alpha \sum_{i=1}^n|w_i|
 $$
 라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.
 $$
-g(w,J) = \nabla_w MSE(w) + \left[\begin{array}{ccc} sign(w_1) \\ sign(w_2) \\ ... \\ sign(w_n) \end{array}\right] \quad 여기서 \quad sign(w_i) = \begin{cases} -1 \quad w_i < 0 \\ 0 \quad w_i = 0 \\ +1 \quad w_i > 0 \end{cases}
+g(w,J) = \nabla_w MSE(w) + \left[\begin{array}{ccc} \text{sign}(w_1) \\ \text{sign}(w_2) \\ ... \\ \text{sign}(w_n) \end{array}\right] \quad 여기서 \quad \text{sign}(w_i) = \begin{cases} -1 \quad w_i < 0 \\ 0 \quad w_i = 0 \\ +1 \quad w_i > 0 \end{cases}
 $$
 사이킷런에서는 다음과 같은 코드로 라쏘 모델을 작동할 수 있다.
 
@@ -242,9 +242,104 @@ elastic_net.fit(X, y)
     <img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_0415.png" alt="EarlyStopping" style="zoom:33%;" />
 </p>
 
+에포크 수가 적을 때는 진행됨에 따라 에러가 줄어들지만, 일정 시점 이후부터는 Validation set의 에러가 증가한다. 조기 종료는 Best model 에 해당하는(즉, Validation set의 에러가 최소인) 지점에서 즉시 훈련을 멈추는 것을 뜻한다. 조기 종료는 사이킷 런에서 다음과 같이 구현할 수 있다.
+
+```python
+from sklearn.base import clone
+sgd_reg = SGDRegressor(n_iter=1, warm_start=True, penalty=None,
+                      learning_rate="constant", eta0=0.0005)
+minimum_val_error = float("inf")
+best_epoch=None
+best_model=None
+for epoch in range(1000):
+    sgd_reg.fit(X_train, y_train)
+    y_val_predict = sgd_reg.predict(X_val)
+    
+    val_error = mean_squared_error(y_val, y_val_predict)
+    if val_error < minimum_val_error:
+        minimum_val_error = val_error
+        best_epoch = epoch
+        best_model = clone(sqd_reg)
+```
+
 <br/>
 
 ## 6) 로지스틱 회귀
+
+**로지스틱 회귀** (Logistic Regression) : 로지스틱 회귀는 샘플이 특정 클래스에 속할 확률을 추정하는 데 널리 사용된다. 추정 확률이 50%가 넘으면 모델은 그 샘플이 해당 클래스에 속한다고 예측하며, 그렇지 않은 경우에는 클래스에 속하지 않는다고 평가한다.
+
+로지스틱 회귀는 선형 회귀와 같이 입력 특성의 가중치 합을 계산한다. 그러나 바로 출력하지 않고 결괏값의 로지스틱을 출력한다.
+$$
+\hat{p} = h_w(\mathbf{x}) = \sigma (w^T \cdot \mathbf{x})
+$$
+$\sigma (\cdot)$ : 시그모이드 함수. 치역(결괏값의 범위)을 (0,1)로 만드는 S자 형태의 함수.
+$$
+\sigma(t) = \frac{1}{1+\text{exp}(-t)}
+$$
+
+<p align="center">
+    <img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in06.png" alt="sigmoid" style="zoom: 50%;" />
+</p>
+
+로지스틱 회귀 모델로 샘플 $\mathbf{x}$ 가 양성 클래스에 속할 확률 $\hat{p} = h_0(\mathbf{x})$ 를 추정하면 이에 대한 예측 $\hat{y}$ 을 쉽게 구할 수 있다.
+
+$\hat{y} = \begin{cases} 0 \quad \hat{p} < 0.5 \\ 1 \quad \hat{p} \geq 0.5 \end{cases}$
+
+$t < 0$ 이면 $\sigma(t) < 0.5$ 이고, $t \geq 0$ 이면 $\sigma(t) \geq 0.5$ 이다. 따라서 로지스틱 회귀 모델은 $w^T \cdot \mathbf{x}$ 가 양수일 때 1이라고 예측하고, 음수일 때는 0이라고 예측한다.
+
+**로지스틱 회귀의 훈련** : 로지스틱 회귀 모델에서 훈련의 목적은 양성 샘플에 대해서 높은 확률을 추정하고 음성 샘플에 대해서는 낮은 확률을 추정하는 모델의 파라미터 벡터($\mathbf{w}$)를 찾는 것이다. 다음의 비용함수 $c(\mathbf{w})$ 를 통해 $\mathbf{w}$ 를 찾을 수 있다.
+$$
+c(w) = \begin{cases} -\text{log}(\hat{p}) \qquad y = 1 \\ -\text{log}(1 - \hat{p}) \quad y=0 \end{cases}
+$$
+이 비용 함수는 $t$ 가 0에 가까워지면, $-\text{log}(t)$ 가 매우 커지고, $t$ 가 1에 가까워지면 $-\text{log} (t)$ 는 0에 가까워진다. 다시 말해 전자의 경우 모델이 양성 샘플을 0에 가까운 확률로 추정하면 비용이 매우 커지게 되고, 후자의 경우 모델이 양성 샘플을 1에 가깝게 추정하면 비용이 0에 가까워지게 된다. 이를 전체 훈련 세트에 대한 비용 함수로 확장할 수 있으며, 이를 **로그 손실** (log loss)이라고 한다.
+$$
+J(w) = -\frac{1}{m}\sum_{i=1}^m[y^{(i)}\text{log}(\hat{p}^{(i)}) + (1 - y^{(i)})\text{log}(1 - \hat{p}^{(i)})]
+$$
+위 비용 함수의 최솟값을 계산하는 알려진 해는 없으나, 볼록 함수이므로 경사 하강법을 통해 전역 최솟값을 찾을 수 있다. 비용 함수의 $j$ 번째 모델 파라미터 $w_j$ 에 대해 편미분을 하면 아래의 식이 도출된다.
+$$
+\frac{\partial}{\partial w_j}J(w) = \frac{1}{m} \sum_{i=1}^m (\sigma(w^T \cdot \mathbf{x}^{(i)}) - y^{(i)})x_j^{(i)}
+$$
+0과 1의 클래스로 분류될 확률이 모두 0.5가 되는 지점에서 로지스틱 회귀 모델의 결정 경계(Decision boundary)가 만들어진다. 다른 선형 모델처럼 로지스틱 회귀 모델도 $l_1, l_2$ 페널티를 사용하여 규제할 수 있다. 사이킷런은 기본적으로 $l_2$ 페널티를 기본으로 한다.
+
+**소프트맥스 회귀** (Softmax Regression) : 로지스틱 회귀 모델의 이진 분류를 다중 분류로 확장한 것을 소프트맥스 회귀 또는 **다항 로지스틱 회귀** (Multinomial Logistic Regression)라고 한다. 샘플 $\mathbf{x}$ 가 주어지면 소프트맥스 회귀 모델이 각 클래스 $k$ 에 대한 점수 $s_k(\mathbf{x})$ 를 계산하고, 그 점수에 소프트맥스 함수(또는 정규화된 지수 함수(normalized exponential))를 적용하여 각 클래스의 확률을 추정한다. $s_k(\mathbf{x})$ 는 아래와 같은 식으로 계산할 수 있다.
+$$
+s_k(\mathbf{x}) = (w^{(k)})^T \cdot \mathbf{x}
+$$
+각 클래스는 자신만의 파라미터 벡터 $w^{(k)}$ 가 있으며 이 벡터들은 파라미터 행렬 $\mathbf{w}$ 에 행으로 저장된다. 샘플 $\mathbf{x}$ 에 대해 각 클래스의 점수가 계산되면 소프트맥스 함수를 통과시켜 클래스 $k$ 에 속할 확률인 $\hat{p}_k$ 를 구할 수 있다.
+$$
+\hat{p}_k = \sigma(\mathbf{s}(\mathbf{x}))_k = \frac{\text{exp}(s_k{(\mathbf{x}}))}{\sum_{j=1}^K \text{exp}(s_j(\mathbf{x}))}
+$$
+
+- $K$ : 클래스 수
+- $\mathbf{s}(\mathbf{x})$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수를 담고 있는 벡터
+- $\sigma(\mathbf{s}(\mathbf{x}))_k$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수가 주어졌을 때 이 샘플이 클래스 $k$ 에 속할 추정 확률
+
+로지스틱 회귀 모델과 마찬가지로 소프트맥스 회귀 모델도 추정 확률이 가장 높은 클래스를 선택한다.[^7]
+$$
+\hat{y} = \text{argmax}_k \sigma (\mathbf{s}(\mathbf{x}))_k = \text{argmax}_k s_k(\mathbf{x}) = \text{argmax}_k ((w^{(k)})^T \cdot \mathbf{x})
+$$
+
+- $\text{argmax}$ 연산은 함수를 최대화하는 변수의 값을 반환합니다. 이 식에서는 추정확률 $\sigma (\mathbf{s}(\mathbf{x}))_k$ 가 최대인 $k$ 값을 반환한다.
+
+소프트맥스 회귀 모델의 훈련 방법 : 모델이 타겟 클래스에 대해서는 높은 확률을, 다른 클래스에 대해서는 낮을 확률을 추정하게 하는 **크로스엔트로피** (Cross entropy) 비용 함수[^8]를 사용한다.
+$$
+J(\mathbf{w}) = \frac{1}{m}\sum_{i=1}^m \sum_{k=1}^K y^{(i)}_k\text{log}(\hat{p}_k^{(i)})
+$$
+
+- $i$ 번째 샘플에 대한 타깃 클래스가 $k$ 일 때, $y^{(i)}_k$ 가 1이고, 그 외에는 0이다.
+
+위 함수의 $w^{(k)}$ 에 대한 그래디언트 벡터는 아래와 같다.
+$$
+\nabla_{w^k} J(\mathbf{w}) = \frac{1}{m}\sum_{i=1}^m (\hat{p}_k^{(i)} - y^{(i)}_k) \mathbf{x}^{(i)}
+$$
+이제 각 클래스에 대한 그래디언트 벡터를 계산할 수 있으므로 비용 함수를 최소화 하기 위한 파라미터 행렬인 $\mathbf{w}$ 를 찾기 위해 경사 하강법을 사용할 수 있다.
+
+사이킷런에서 LogisticRegression() 은 클래스가 둘 이상일 때 기본적으로 일대다(OvA) 전략을 사용한다. 하지만 multi_class 매개변수를 "multimodal"로 바꾸면 소프트맥스 회귀를 사용할 수 있다. 그리고 solver 매개변수에 "lbfgs"와 같이 소프트맥스 회귀를 지원하는 알고리즘을 지정해야 한다. 이때, 기본적으로 하이퍼파라미터 C를 사용하여 조절할 수 있는 $l_2$ 규제가 적용된다. 위 내용을 코드로 구현하면 다음과 같다.
+
+```python
+softmax_reg = LogisticRegression(multi_class="multimodal", solver="lbfgs", C=10)
+softmax_reg.fit(X, y)
+```
 
 
 
@@ -258,3 +353,4 @@ elastic_net.fit(X, y)
 [^5]: 과대적합 모델을 개선하는 한 가지 방법은 검증 오차가 훈련 오차에 근접할 때까지 더 많은 훈련 데이터를 추가하는 것.
 [^6]: 희소모델은 성분 중 0이 많은(즉, non-zero 값이 희소한 모델을 가리킨다.) 자세한 설명은 [이곳](https://dp-story.tistory.com/4) 을 참조하면 좋다.
 
+[^7]: 소프트맥스 회귀 모델은 한 번에 하나의 클래스만 예측한다. 그래서 상호 배타적인 클래스에서만 사용해야 하며, 하나의 사진에서 여러 사람의 얼굴을 인식하는 것과 같은 다중 출력 문제에는 사용할 수 없다.
