--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -351,6 +351,7 @@ softmax_reg.fit(X, y)
 
 [^4]: PolynomialFeatures(degree=d)는 특성이 n개인 배열을 특성이 $\frac{(n+d)!}{d!n!}$ 개인 배열로 변환한다. 특성 수가 엄청나게 늘어날 수 있으니 주의.
 [^5]: 과대적합 모델을 개선하는 한 가지 방법은 검증 오차가 훈련 오차에 근접할 때까지 더 많은 훈련 데이터를 추가하는 것.
-[^6]: 희소모델은 성분 중 0이 많은(즉, non-zero 값이 희소한 모델을 가리킨다.) 자세한 설명은 [이곳](https://dp-story.tistory.com/4) 을 참조하면 좋다.
+[^6]: 희소모델은 성분 중 0이 많은(즉, non-zero 값이 희소한 모델을 가리킨다.) 자세한 설명은 [이곳](https://dp-story.tistory.com/4) 에서 더 자세히 볼 수 있다.
 
 [^7]: 소프트맥스 회귀 모델은 한 번에 하나의 클래스만 예측한다. 그래서 상호 배타적인 클래스에서만 사용해야 하며, 하나의 사진에서 여러 사람의 얼굴을 인식하는 것과 같은 다중 출력 문제에는 사용할 수 없다.
+[^8]: 크로스엔트로피에 대한 정보는 [이곳](https://m.blog.naver.com/PostView.nhn?blogId=yonggeol93&logNo=221230536533&proxyReferer=https%3A%2F%2Fwww.google.com%2F) 에서 더 자세히 볼 수 있다.
